--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "homepage": "https://affank1020.github.io",
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.19",
+    "heroicons": "^2.1.4",
+    "matter-js": "^0.20.0",
+    "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "tailwindcss": "^3.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
